fix: use fork of directories library with JNI implemetation for Windows (#2401)